# meeting_room_booking_system

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements_full.txt
.github/: pull_request_template.md
src/models/: admin.py  booking.py  person.py  room.py  user.py
tests/models/: conftest.py  test_booking.py  test_person.py  test_room.py
